src/objects/Rejected_Duplicate_Log__c.object
<CustomObject>
    <description>Requirement: US-DD-002
Description: To support this solution we can create a new custom object to track the suspect-duplicates that have been manually confirmed as not a match. The custom object could be called &quot;Rejected Duplicate Log&quot; and would contain a the Master Account, Duplicate Account and Duplicate reason code.</description>
    <fields>
        <fullName>DUPNumber__c</fullName>
        <description>Requirement: US-DD-002
CreateBy: Mouse Liu
CreatedDate: 2013-06-08</description>
        <label>DUP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requirement: US-DD-002
CreateBy: Mouse Liu
CreatedDate: 2013-06-08</description>
        <label>Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rejected Duplicate Logs (Duplicate Account)</relationshipLabel>
        <relationshipName>Rejected_Duplicate_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason_Code__c</fullName>
        <description>Requirement: US-DD-002
CreateBy: Mouse Liu
CreatedDate: 2013-06-08</description>
        <label>Duplicate Reason Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,&apos;NA&apos;)))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requirement: US-DD-002
CreateBy: Mouse Liu
CreatedDate: 2013-06-08</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rejected Duplicate Logs</relationshipLabel>
        <relationshipName>Rejected_Duplicate_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_checkRecordID__c</fullName>
        <formula>IF(Id!=NULL,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>checkRecordID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rejected Duplicate Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Master_Account__c</columns>
        <columns>Duplicate_Account__c</columns>
        <columns>Duplicate_Reason_Code__c</columns>
        <columns>DUPNumber__c</columns>
        <columns>Status__c</columns>
        <columns>MD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RDLN-{00000000}</displayFormat>
        <label>Rejected Duplicate Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejected Duplicate Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>